--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.17.1"
+    "astro": "^5.17.1",
+    "astro-carousel": "^3.0.3"
+  },
+  "devDependencies": {
+    "sass": "^1.97.3"
   }
 }
